Interpreter/test_cases/good/substring-ok.cl
class Main inherits IO {
    main() : Object { {
        out_string("Hello, world\n" . substr(7,4) ) ;
        out_string("\n") ; 
    } };
}; 
